feat: Implement pre processing and finished part o env proxy