@@ -18,6 +18,7 @@
     <maven.compiler.release>25</maven.compiler.release>
     <djl.version>0.36.0</djl.version>
     <mockito.version>5.21.0</mockito.version>
+    <lombok.version>1.18.42</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -61,8 +62,8 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.42</version>
-      <scope>compile</scope>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -132,12 +133,24 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.13.0</version>
+          <configuration>
+            <source>25</source>
+            <target>25</target>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.3.0</version>
           <configuration>
             <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+            <argLine>--enable-native-access=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
         <plugin>
